--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ header p {
 header .hero-img {
   position: relative;
   height: 100vh;
-  background-image: url("../img/hero.jpg");
+  background-image: url("../img/hero.png");
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
