--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,9 @@ header .hero-img .hero-text .bi-arrow-down:hover {
  */
 footer {
   margin-bottom: 40px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+
 }
 
 footer span {
